# agentstep

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sample.py  trace.sqlite
docs/: USAGE.md
src/agent_replay/sdk/: exporter.py  tracer.py
src/agent_replay/server/: api.py  cli.py  replayer.py
src/agentstep/sdk/: exporter.py  tracer.py
src/agentstep/server/: api.py  cli.py  replayer.py
src/agentstep/server/ui_dist/: index.html
src/agentstep/server/ui_dist/assets/: index-CFWPmmyX.css  index-patched-v2.js  index-z8Ky23wm.js
tests/: test_tracer.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
